@@ -829,6 +829,34 @@ def plot():
             +'Bi8gaUBR4AQGCrqKHWswIAA7')
     return img
 
+def plot_clear():
+    img = tk.PhotoImage(format='gif',data=
+             'R0lGODlhEAAQAPedAGVCPXZsJXsueXwzfH04f2pBbWhTe6pJB6lMCblFA7tC'
+            +'BLxCBLxCBbxDBbtNBa5NG7hVF61PIL9dIt1kAeFoA+52AOp5Bfh2AO9/GP93'
+            +'Ef9/GMZjJ8tsLs1yO+Z3IfM9QfVHSvZRU/5ZVvhbW/5eW/5hXfpkY/5mYv5p'
+            +'Zfxsav5va/5xbf1xbv1zcP52cv54dP55df5+eU2WRVWhTVyoUmGwV2e2XGy8'
+            +'YP+GIbGPXuuKQP+STfSdY/6BfPWocn4/gxEuwBIxxBI3xhM6xhVDyRZMzRhV'
+            +'zxhXzxpg0Rpi0R5p1h5r1ip02Cx02Dl72Tt92Tp824BEh5J6h0GA2kSD20WE'
+            +'30eF30qG3E2J3VOM3lWN31aP31mP31KN4VOO4VyS4F2T4FyS4l6V4mCV4WOX'
+            +'4WWY4mWZ5Geb5mqc42yc42ud5m6e5G6f5G6g6HOi5nSi5Xaj5Xil5nun53yo'
+            +'532o53Cg6HSk6Hem6v6Fgf6Tkf6Vk/6Xlf6Ylv6bmfa1jfe1jf6gnv6kov6q'
+            +'qP6vrP6zsP62s/63tP65tv67uP7Nrv7WuIGs6YOt6IWt6YWu6Ymx6oqy6o2z'
+            +'6oyz65G27JK37JS37Zm77Zu87qDB7qLC76bF8KjG8KzI8v///wAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAACH5BAEAAJ4AIf8LSW1hZ2VNYWdpY2sKZ2FtbWE9'
+            +'MC40NQAsAAAAABAAEAAACNUAPQkcSLCgwTt32Kg5I8YgwTqcNEns4nDgGU2U'
+            +'IFmqUlFgGEyQHFWCUvDFCxcsUnSxtGhOpCYlER0qRKgKpThuHC0p2MIQnh6D'
+            +'nEBig4ZOkoIpCsV4IagJozJj4By5YaMGjRkmBqEMtCTOFy9sDEhoACGHjBGC'
+            +'UqAAlAROFixSOvxR5INDgBCBTpToYyTNFSoP/uzIgEMHAhCASIjYU4TMlCcL'
+            +'EnWajEHBBz589OQhEoaLlwc8NFyoQOFAlB8EBggYIiQIkAIbPFiY4ABAR4EJ'
+            +'FiQQGBAAOw==')
+    return img
+
 def plotprefs():
     img = tk.PhotoImage(format='gif',data=
              'R0lGODlhEAAQAIcAAAAAAFU9ETxyvz10wj51wz52xD92xT93xltujUJ3xkB4'
@@ -870,6 +898,23 @@ def fit():
             +'Q4aJh1hWgxcXFomIU4IVlhiYhYhNVRARhBITV4M/WEs7DQ6DVVVRUpRYpVgL'
             +'D4NMRERYDE+CpQUHKEpYPDyDCgmCOlgEBElIz4UIgjlYAoQnJiWDBdOFJCLg'
             +'2oQ3gxzmgx8bhDVYAQABhhoZg+yKhjQx+DD7KjAq/ylU2FMUCAA7')
+    return img
+
+def refresh():
+    img = tk.PhotoImage(format='gif',data=
+             'R0lGODlhEAAQAPYAACNhHyRjICVlIidmIyloJCprJixtJzJ0LDN2Ljd7Mjp+'
+            +'NDyANT6DN0CGOUKIO0SLPUqLRUyNR0mRQU2WRU+ZR0+QSVGSS1SVTlGbSVOe'
+            +'S1aXUFWhTVejTlqmUF6rVF+tVmKiW2OkXWWnXmW0W2e2XGi5Xmq7X2ioYGiq'
+            +'YWusY2ytZW6wZmy8YG2+Ynazb3y9c36/dW7AY3/BeYG+eoHCd4PDeYLCeoPE'
+            +'eYXHe4XEfofEgInDgIvDg4rEg4nGgovGg4vHhY3Hho7Gho7JhY/Jh4/JiJDK'
+            +'iJLKiZHKipTLjJXMjZbNj5jOj5nPkJrPkpzPlJzQlJ7RlZ/Rlp/Sl6HSmKTU'
+            +'m6fXngAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAEAAFcA'
+            +'If8LSW1hZ2VNYWdpY2sKZ2FtbWE9MC40NQAsAAAAABAAEAAAB4mAV4KDhIWG'
+            +'hBQSh4IjIx0ZEycgCoYlNUZQmUlDPRcGhCRDVUxOSkY9OTIRAoQwVE9BIg0L'
+            +'CBUQAYQeO0o9DwuDAwCFG4kOv4vIhMQSxoUtLIOQQkUuCIQtODUeHRgpPEU+'
+            +'Gtc3VlVTTps1OSEFhCMwUk9LST4zKhYEhhwrKA4MCQc+LWKWrCChQAA7')
     return img
 
 def start():
@@ -1312,4 +1357,39 @@ def paste():
             +'KiBwY2Lm5m0LEVY8MzEpHnBqamlo9m0JEVAzMDAmHHLOgRm45oC+fiVEcHCT'
             +'Js0Ze2faFIjwBEWJESI2wBnIEcwaAhGSKFGSxMgHN/YgnlkjYFIhCBXovHnj'
             +'xs1MOQAkCVKA4EABAgQC5AwEADs=')
+     return img
+
+def tilevertical():
+     img = tk.PhotoImage(format='gif',data=
+             'R0lGODlhEAAQAPZrAEBZl0Bal0FbmEVenUZin0pnoUhlo0tnpUtpo01tpU1q'
+            +'qE1qqlJxqFFwrlBxr1N0sVV2s1d5tll8sVl9uFp+uV2CvWGGumSFu2eLv2WL'
+            +'xWySxGuVzG6XznKUwXmax22d2G+f2XGc0XWe1HWf13mgz36j0nih1n+n1XGg'
+            +'2XOh2nSi2naj23ii2Xil232l2Xqm3Hun3Hym3H+o232o3X+q3Yiny4Op1oWt'
+            +'2YGr3oSt34Wu34av34mv24ux3Y2y35C035W234iw4Imx4Iuy4Iyz4Y6y4I61'
+            +'4Y+14omz5oq05oy1542254+355K24ZG14pC24pK34pO445S545W645++5JG4'
+            +'6JK56JS66JW76Ze86Zi96Z3A6p7B66XC5KDC66HD66PE7KTE7KXF7KbG7KfG'
+            +'7KjH7fv8/v39/v7+/v7+//7//////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAEAAGwA'
+            +'LAAAAAAQABAAAAeUgGxsXVNSUD8+PDc2NjWCglRlZWKUYV6XXFwej1FRUFBG'
+            +'RkQ+QkI5ORqPUGusra5rGI8+r65maxaPJbSvDI8ku64JjxJAOTgyLiYhIRwb'
+            +'HQiPRFpZV1dVVUxMSkhIF484M+EvLSspKCgfHxOPMsCtEI8s7qwOjyPzawuP'
+            +'GfgCjwUVJkR44GDBAQMEBgAA8Kihw4eBAAA7')
+
+     return img
+
+def tilehorizontal():
+     img = tk.PhotoImage(format='gif',data=
+             'R0lGODlhEAAQAPZTAEBZl0Bal0Jbl0NdmUNemkVgnEVgnUZinUlln0pnpEtp'
+            +'ok9spk5tpk5rqFJwrVFyslZ3sVR2tVt/tld8uV+EuF+DvGGEu16EwWKIwGeM'
+            +'wGOJxWeQyGuRyG6Yz3OUw3GXy3Wdz3efznOd03yi0Xih1nyk1X6m2n6p3YSi'
+            +'yZCtz4Gp1Iar1oKp2Yat24Cr3YKq3IKs3oat34Wu34ev34iv2Iyx3omx4Iqy'
+            +'4Iqy4Yyz4Y204Y+04I614pC24pG34pK24pO445S545W545e44pW645+94p++'
+            +'5Ji96Zq+6py/6p3A6p/B66XC5KHD66TE7KXF7KfG7KjH7anI7f///wAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAEAAFQA'
+            +'LAAAAAAQABAAAAeEgFSCg4SFgkxENCsqKRZFOjYjISiCRlGXUU9OQ01LS0pH'
+            +'Rx5URERAPjo6OzY2MTEwMCcZVD5Ttrcxt7cWVDu6ti+/UxJUNcImwhBULcIk'
+            +'wg5ULMIiwg1UJcIdwglUIMIbwgZUH8IawgNUHMIXwgBUDBYWDAoIBgYTEQ8D'
+            +'AvyG/v8ABwUCADs=')
      return img
